--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,22 @@ node_modules
 dist
 dist-ssr
 *.local
+build/
+.pnp
+.pnp.js
+coverage/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.DS_Store
+Thumbs.db
+
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +38,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.tsbuildinfo
